Perma [tier 2] 'mach build -v' did not run successfully. Please check log for errors.
Categories
(Core :: Widget: Win32, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr140 | --- | unaffected |
| firefox143 | --- | unaffected |
| firefox144 | --- | unaffected |
| firefox145 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: gstoll)
References
(Regression)
Details
(Keywords: intermittent-failure, regression, Whiteboard: [stockwell unknown])
Attachments
(1 file)
Filed by: chorotan [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=530263553&repo=mozilla-central&task=TkNkz_JrREihHrmews8agA.0
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/TkNkz_JrREihHrmews8agA/runs/0/artifacts/public/logs/live_backing.log
[task 2025-10-06T15:58:36.352+00:00] 15:58:36 INFO - checking whether the C linker supports -Wl,-z,nocopyreloc... no
[task 2025-10-06T15:58:36.503+00:00] 15:58:36 INFO - checking what kind of list files are supported by the linker... linkerlist
[task 2025-10-06T15:58:36.505+00:00] 15:58:36 INFO - checking for llvm_profdata... /builds/worker/fetches/clang/bin/llvm-profdata
[task 2025-10-06T15:58:36.527+00:00] 15:58:36 INFO - checking for readelf... /builds/worker/fetches/clang/bin/llvm-readelf
[task 2025-10-06T15:58:36.541+00:00] 15:58:36 INFO - checking for objcopy... /builds/worker/fetches/clang/bin/llvm-objcopy
[task 2025-10-06T15:58:36.546+00:00] 15:58:36 INFO - checking for rustc... /builds/worker/fetches/rustc/bin/rustc
[task 2025-10-06T15:58:36.546+00:00] 15:58:36 INFO - checking for cargo... /builds/worker/fetches/rustc/bin/cargo
[task 2025-10-06T15:58:36.575+00:00] 15:58:36 INFO - checking rustc version... 1.86.0
[task 2025-10-06T15:58:36.582+00:00] 15:58:36 INFO - checking cargo version... 1.86.0
[task 2025-10-06T15:58:36.723+00:00] 15:58:36 INFO - checking for rust host triplet... x86_64-unknown-linux-gnu
[task 2025-10-06T15:58:37.196+00:00] 15:58:37 INFO - checking for rust target triplet... i686-pc-windows-gnu
[task 2025-10-06T15:58:37.196+00:00] 15:58:37 INFO - checking for rustdoc... /builds/worker/fetches/rustc/bin/rustdoc
[task 2025-10-06T15:58:37.201+00:00] 15:58:37 INFO - checking for cbindgen... /builds/worker/fetches/cbindgen/cbindgen
[task 2025-10-06T15:58:37.201+00:00] 15:58:37 INFO - checking for rustfmt... /builds/worker/fetches/rustc/bin/rustfmt
[task 2025-10-06T15:58:37.202+00:00] 15:58:37 INFO - checking for clang for bindgen... /builds/worker/fetches/clang/bin/i686-w64-mingw32-clang++
[task 2025-10-06T15:58:37.213+00:00] 15:58:37 INFO - checking for libclang for bindgen... /builds/worker/fetches/clang/lib/libclang.so
[task 2025-10-06T15:58:37.219+00:00] 15:58:37 INFO - checking that libclang is new enough... yes
[task 2025-10-06T15:58:37.219+00:00] 15:58:37 INFO - checking bindgen cflags... ['-x', 'c++', '-fno-sized-deallocation', '-fno-aligned-new', '-DTRACING=1', '-DIMPL_LIBXUL', '-DMOZILLA_INTERNAL_API', '-DRUST_BINDGEN', '-DWIN32=1']
[task 2025-10-06T15:58:37.503+00:00] 15:58:37 INFO - checking for tm_zone and tm_gmtoff in struct tm... no
[task 2025-10-06T15:58:38.253+00:00] 15:58:38 INFO - checking for _getc_nolock... yes
[task 2025-10-06T15:58:38.371+00:00] 15:58:38 INFO - checking for localeconv... yes
[task 2025-10-06T15:58:38.379+00:00] 15:58:38 INFO - checking for nodejs... /builds/worker/fetches/node/bin/node (22.16.0)
[task 2025-10-06T15:58:38.382+00:00] 15:58:38 INFO - checking for tar... /bin/tar
[task 2025-10-06T15:58:38.383+00:00] 15:58:38 INFO - checking for unzip... /bin/unzip
[task 2025-10-06T15:58:38.383+00:00] 15:58:38 INFO - checking for the Mozilla API key... no
[task 2025-10-06T15:58:38.383+00:00] 15:58:38 INFO - checking for the Google Location Service API key... no
[task 2025-10-06T15:58:38.383+00:00] 15:58:38 INFO - checking for the Google Safebrowsing API key... no
[task 2025-10-06T15:58:38.383+00:00] 15:58:38 INFO - checking for the Bing API key... no
[task 2025-10-06T15:58:38.383+00:00] 15:58:38 INFO - checking for the Adjust SDK key... no
[task 2025-10-06T15:58:38.384+00:00] 15:58:38 INFO - checking for the Leanplum SDK key... no
[task 2025-10-06T15:58:38.384+00:00] 15:58:38 INFO - checking for the Pocket API key... no
[task 2025-10-06T15:58:38.387+00:00] 15:58:38 INFO - checking for midl... /builds/worker/fetches/clang/bin/i686-w64-mingw32-widl
[task 2025-10-06T15:58:38.388+00:00] 15:58:38 INFO - checking for llvm-dlltool... /builds/worker/fetches/clang/bin/llvm-dlltool
[task 2025-10-06T15:58:38.388+00:00] 15:58:38 INFO - checking for fxc... /builds/worker/fetches/fxc2/bin/fxc2.exe
[task 2025-10-06T15:58:38.392+00:00] 15:58:38 INFO - checking for nasm... /builds/worker/fetches/nasm/nasm
[task 2025-10-06T15:58:38.395+00:00] 15:58:38 INFO - checking nasm version... 2.16.03
[task 2025-10-06T15:58:38.395+00:00] 15:58:38 INFO - checking for the Windows App SDK... no
[task 2025-10-06T15:58:38.396+00:00] 15:58:38 INFO - ERROR: Windows App SDK dir not present!
[task 2025-10-06T15:58:38.467+00:00] 15:58:38 INFO - *** Fix above errors and then restart with "./mach build"
[task 2025-10-06T15:58:38.535+00:00] 15:58:38 INFO - Return code: 1
[task 2025-10-06T15:58:38.535+00:00] 15:58:38 WARNING - setting return code to 2
[task 2025-10-06T15:58:38.535+00:00] 15:58:38 FATAL - 'mach build -v' did not run successfully. Please check log for errors.
[task 2025-10-06T15:58:38.535+00:00] 15:58:38 FATAL - Running post_fatal callback...
[task 2025-10-06T15:58:38.535+00:00] 15:58:38 FATAL - Exiting -1
[task 2025-10-06T15:58:38.536+00:00] 15:58:38 INFO - [mozharness: 2025-10-06 15:58:38.535952Z] Finished build step (failed)
[task 2025-10-06T15:58:38.536+00:00] 15:58:38 INFO - Running post-run listener: _parse_build_tests_ccov
[task 2025-10-06T15:58:38.536+00:00] 15:58:38 INFO - Running command: ['/builds/worker/.mozbuild/srcdirs/gecko-8a5b87fe5d69/_virtualenvs/common/bin/python', 'mach', 'python', 'testing/parse_build_tests_ccov.py'] in /builds/worker/checkouts/gecko
[task 2025-10-06T15:58:38.536+00:00] 15:58:38 INFO - Copy/paste: /builds/worker/.mozbuild/srcdirs/gecko-8a5b87fe5d69/_virtualenvs/common/bin/python mach python testing/parse_build_tests_ccov.py
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - Using env: {'ACCEPTED_MAR_CHANNEL_IDS': 'firefox-mozilla-central',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'DEBIAN_FRONTEND': 'noninteractive',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'DISPLAY': ':2',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'EXTRA_MOZHARNESS_CONFIG': '{"mozconfig_variant":"mingwclang-debug","objdir":"obj-build","update_channel":"nightly"}',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'GECKO_BASE_REPOSITORY': 'https://hg.mozilla.org/mozilla-unified',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'GECKO_HEAD_REF': 'b4f1173ee49fbd156602c11177de3f333a33911b',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'GECKO_HEAD_REPOSITORY': 'https://hg.mozilla.org/mozilla-central',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'GECKO_HEAD_REV': 'b4f1173ee49fbd156602c11177de3f333a33911b',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'GECKO_PATH': '/builds/worker/checkouts/gecko',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'GECKO_REPOSITORY_TYPE': 'hg',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'GRCOV_PATH': '/builds/worker/fetches/grcov/grcov',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'HG_SHARE_BASE_DIR': '/builds/hg-shared',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'HG_STORE_PATH': '/builds/worker/checkouts/hg-store',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'HOME': '/builds/worker',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'HOSTNAME': 'taskcluster-worker',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'LC_ALL': 'C',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'LC_CTYPE': 'C.UTF-8',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'LOGNAME': 'worker',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'MACH_BUILD_PYTHON_NATIVE_PACKAGE_SOURCE': 'system',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'MACH_MAIN_PID': '79',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'MACH_SYSTEM_ASSERTED_COMPATIBLE_WITH_COMMON_SITE': '1',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'MACH_SYSTEM_ASSERTED_COMPATIBLE_WITH_MACH_SITE': '1',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'MAR_CHANNEL_ID': 'firefox-mozilla-central',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'MH_BRANCH': 'mozilla-central',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'MOZBUILD_STATE_PATH': '/builds/worker/.mozbuild',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'MOZHARNESS_ACTIONS': 'build',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'MOZHARNESS_CONFIG': 'builds/releng_base_firefox.py '
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'builds/releng_base_windows_32_mingw_builds.py '
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'builds/releng_sub_windows_configs/32_mingwclang.py',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'MOZHARNESS_SCRIPT': 'mozharness/scripts/fx_desktop_build.py',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'MOZPYTHONHOME': '/builds/worker/fetches/python',
[task 2025-10-06T15:58:38.537+00:00] 15:58:38 INFO - 'MOZ_ARTIFACT_PLATFORM': 'win32-mingwclang',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_AUTOMATION': '1',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_AUTOMATION_PACKAGE_TESTS': '1',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_BUILD_DATE': '20251006155229',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_CRASHREPORTER_NO_REPORT': '1',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_FETCHES': '[{"artifact":"public/build/cbindgen.tar.zst","extract":true,"task":"ebIIP8rSSnC-aORzdZ5aOw"},{"artifact":"public/build/clangmingw.tar.zst","extract":true,"task":"QEJ6af3bRgKvbONnXGK03w"},{"artifact":"public/build/dump_syms.tar.zst","extract":true,"task":"eHxDoGOvTU2TQ3qY-TvCjA"},{"artifact":"public/build/fxc2.tar.zst","extract":true,"task":"X6i8h8SfRMOwDMDmPrlctg"},{"artifact":"public/build/nasm.tar.zst","extract":true,"task":"byFR4KBGSoiKeDXzPTmdXA"},{"artifact":"public/build/node.tar.zst","extract":true,"task":"flmu_c7AQtqZcZp2_PVy3w"},{"artifact":"public/build/nsis.tar.zst","extract":true,"task":"SxknU2YxToCsWJHcbWE6Cw"},{"artifact":"public/build/python.tar.zst","extract":true,"task":"eanlCDuOTOSwHUEts2OfRw"},{"artifact":"public/build/rustc.tar.zst","extract":true,"task":"eq6jHkyFRxWI3BYVkgDUfw"},{"artifact":"public/build/sccache.tar.zst","extract":true,"task":"YP-33qMRRnWtz6Wj5gU-pg"},{"artifact":"public/build/sysroot-wasm32-wasi.tar.zst","extract":true,"task":"Uvy85sWkSdyFN_pWtEGTxQ"},{"artifact":"public/build/sysroot-x86_64-linux-gnu.tar.zst","extract":true,"task":"OklGKRbjTPqbIApzS74ElA"},{"artifact":"public/build/upx.tar.zst","extract":true,"task":"JpV3PIf0SFGgTQ3hE5ce1g"},{"artifact":"public/build/uv.tar.zst","extract":true,"task":"bSH8RIvdS0a1iz59v4Fe3Q"},{"artifact":"public/build/wine.tar.zst","extract":true,"task":"H1NYhB0BRg-obIU4KQoygg"},{"artifact":"public/windows-rs.tar.zst","extract":true,"task":"d-MnrsjmSuakNmgjVPXTMg"}]',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_FETCHES_DIR': '/builds/worker/fetches',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_OBJDIR': '/builds/worker/workspace/obj-build',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_PYTHON_HOME': '/builds/worker/fetches/python',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_SCM_LEVEL': '3',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_SIMPLE_PACKAGE_NAME': 'target',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_SOURCE_CHANGESET': 'b4f1173ee49fbd156602c11177de3f333a33911b',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_SOURCE_REPO': 'https://hg.mozilla.org/mozilla-central',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'MOZ_UV_HOME': '/builds/worker/fetches/uv',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'OLDPWD': '/builds/worker',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'PATH': '/usr/local/bin:/bin:/usr/bin',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'PERFHERDER_EXTRA_OPTIONS': 'debug 32 clang',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'PWD': '/builds/worker',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'PYTHONDONTWRITEBYTECODE': '1',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'PYTHONUNBUFFERED': '1',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'REPOSITORIES': '{"gecko":"Mozilla Firefox"}',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'REQUIRE_GPU': '0',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'RUN_ID': '0',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'SCCACHE_GCS_PROJECT': 'sccache-3',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'SCCACHE_IDLE_TIMEOUT': '0',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'SHELL': '/bin/bash',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'SHLVL': '1',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_INSTANCE_TYPE': 'projects/970387039909/machineTypes/c3d-standard-16-lssd',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_NAME': '/objective_panini/taskcluster',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_PORT': 'tcp://172.17.0.3:80',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_PORT_80_TCP': 'tcp://172.17.0.3:80',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_PORT_80_TCP_ADDR': '172.17.0.3',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_PORT_80_TCP_PORT': '80',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_PORT_80_TCP_PROTO': 'tcp',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_PROXY_URL': 'http://taskcluster',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_PUBLIC_IP': '34.66.65.9',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_ROOT_URL': 'https://firefox-ci-tc.services.mozilla.com',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_WORKER_GROUP': 'us-central1-a',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_WORKER_LOCATION': '{"cloud":"google","region":"us-central1","zone":"us-central1-a"}',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_WORKER_POOL': 'gecko-3/b-linux-amd',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASKCLUSTER_WORKER_TYPE': 'b-linux-amd',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASK_ID': 'TkNkz_JrREihHrmews8agA',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TASK_WORKDIR': '/builds/worker',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TERM': 'xterm',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TINDERBOX_OUTPUT': '1',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TOOLTOOL_CACHE': '/builds/worker/tooltool-cache',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'TOOLTOOL_HOME': '/builds',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'UPLOAD_DIR': '/builds/worker/artifacts',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'USER': 'worker',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'USE_SCCACHE': '1',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'VIRTUAL_ENV': '/builds/worker/.mozbuild/srcdirs/gecko-8a5b87fe5d69/_virtualenvs/common',
[task 2025-10-06T15:58:38.538+00:00] 15:58:38 INFO - 'WORKSPACE': '/builds/worker/workspace',
[task 2025-10-06T15:58:38.539+00:00] 15:58:38 INFO - 'XZ_OPT': '-T0',
[task 2025-10-06T15:58:38.539+00:00] 15:58:38 INFO - '_': '/builds/worker/checkouts/gecko/mach'}
[task 2025-10-06T15:58:39.859+00:00] 15:58:39 INFO - Return code: 0
[task 2025-10-06T15:58:39.859+00:00] 15:58:39 INFO - Running post-run listener: _relocate_artifacts
[task 2025-10-06T15:58:39.862+00:00] 15:58:39 INFO - The artifact /builds/worker/artifacts/target.crashreporter-symbols-full.tar.zst is not present in this build. Skipping
[task 2025-10-06T15:58:39.862+00:00] 15:58:39 INFO - The artifact /builds/worker/artifacts/sccache.log is not present in this build. Skipping
[task 2025-10-06T15:58:39.862+00:00] 15:58:39 INFO - The artifact /builds/worker/artifacts/sccache-stats.json is not present in this build. Skipping
[task 2025-10-06T15:58:39.862+00:00] 15:58:39 INFO - Running post-run listener: _summarize
[task 2025-10-06T15:58:39.862+00:00] 15:58:39 INFO - [mozharness: 2025-10-06 15:58:39.862437Z] FxDesktopBuild summary:
[taskcluster 2025-10-06 15:58:49.122Z] === Task Finished ===
Comment 1•3 months ago
|
||
Set release status flags based on info from the regressing bug 1947324
:gstoll, since you are the author of the regressor, bug 1947324, could you take a look?
For more information, please visit BugBot documentation.
Comment 2•3 months ago
|
||
This also seems to break all Windows builds for Thunderbird so if we need to make any changes, please advise. Cheers
| Assignee | ||
Comment 4•3 months ago
•
|
||
:tobyp - do you have a link to a failing build?
I think what needs to happen is something like D263603, where I added dependencies on the various winappsdk fetches. My guess is that I missed some Thunderbird builds somewhere. (as I did with the mingw builds)
Comment 5•3 months ago
•
|
||
| Assignee | ||
Comment 6•3 months ago
|
||
Also should fix win64-st-autotest build
Updated•3 months ago
|
| Comment hidden (Intermittent Failures Robot) |
Comment 9•3 months ago
|
||
| bugherder | ||
| Comment hidden (Intermittent Failures Robot) |
Comment 11•2 months ago
|
||
(In reply to Pulsebot from comment #7)
Pushed by gstoll@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/e1d080bed3d6
https://hg.mozilla.org/integration/autoland/rev/e3f1fd706322
fix mingw builds by adding Windows App SDK toolchain dependency
r=taskgraph-reviewers,win-reviewers,handyman,jmaher
Hello!
Do you think it's possible the push mentioned in the referenced comment could have caused the improvement below ?
We are unable to run backfills on the following push range, and it's difficult to determine which of the patches in that push range caused the improvement.
Perfherder has detected a browsertime performance change from push e3f1fd706322ba441f886715b7d6dc5cf1e62c60.
If you have any questions, please reach out to a performance sheriff. Alternatively, you can find help on Slack by joining #perf-help, and on Matrix you can find help by joining #perftest.
Improvements:
| Ratio | Test | Platform | Options | Absolute values (old vs new) |
|---|---|---|---|---|
| 5% | speedometer React-TodoMVC/DeletingAllItems | windows11-64-24h2-shippable | fission webrender | 11.45 -> 10.92 |
Details of the alert can be found in the alert summary, including links to graphs and comparisons for each of the affected tests.
If you need the profiling jobs you can trigger them yourself from treeherder job view or ask a performance sheriff to do that for you.
You can run all of these tests on try with ./mach try perf --alert 47215
The following documentation link provides more information about this command.(In reply to Pulsebot from comment #7)
Pushed by gstoll@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/e1d080bed3d6
https://hg.mozilla.org/integration/autoland/rev/e3f1fd706322
fix mingw builds by adding Windows App SDK toolchain dependency
r=taskgraph-reviewers,win-reviewers,handyman,jmaher
Hello!
Do you think it's possible the push mentioned in the referenced comment could have caused the improvement below ?
We are unable to run backfills on the following push range, and it's difficult to determine which of the patches in that push range caused the improvement.
Perfherder has detected a browsertime performance change from push e3f1fd706322ba441f886715b7d6dc5cf1e62c60.
If you have any questions, please reach out to a performance sheriff. Alternatively, you can find help on Slack by joining #perf-help, and on Matrix you can find help by joining #perftest.
Improvements:
| Ratio | Test | Platform | Options | Absolute values (old vs new) |
|---|---|---|---|---|
| 5% | speedometer React-TodoMVC/DeletingAllItems | windows11-64-24h2-shippable | fission webrender | 11.45 -> 10.92 |
Details of the alert can be found in the alert summary, including links to graphs and comparisons for each of the affected tests.
If you need the profiling jobs you can trigger them yourself from treeherder job view or ask a performance sheriff to do that for you.
You can run all of these tests on try with ./mach try perf --alert 47215
The following documentation link provides more information about this command.
| Assignee | ||
Comment 12•2 months ago
|
||
Hello! I don't think this is possible; that commit only fixes the mingw builds, and it doesn't look like those builds are used for the windows11-64-24h2-shippable build.
It does look like there are some changes to Spidermonkey (including bug 1989107?) in that push that maybe could have caused the improvement?
| Comment hidden (Intermittent Failures Robot) |
Description
•