Bug 1992783 - fix mingw builds by adding Windows App SDK toolchain dependency r=taskgraph-reviewers,win-reviewers,handyman,jmaher

Also turned off using the Windows App SDK in mingw since that seems to
be the pattern we follow for other advanced Windows features.

Also fixex win64-st-autotest build, and fixes another mingw bustage
in TestFile.cpp.

Differential Revision: https://phabricator.services.mozilla.com/D267643